--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,31 @@
 version: "3"
 services:
   server:
+    container_name: mancala-server
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      REDIS_URL: redis://redis:6379/0
     depends_on:
-      - redis
+      - db
+    environment:
+      DATABASE_URL: postgres://mancala-app:p4ssw0rd@db:5432/mancala-db?sslmode=disable
     volumes:
       - .:/app
     ports:
       - 1323:1323
-
-  redis:
-    image: redis:5-alpine
+  
+  db:
+    image: postgres:13-alpine
+    container_name: mancala-db
+    command: postgres -c 'max_connections=100'
+    environment:
+      - POSTGRES_USER=mancala-app
+      - POSTGRES_PASSWORD=p4ssw0rd
+      - POSTGRES_DB=mancala-db
     ports:
-      - 6379:6379
+      - 5432:5432
     volumes:
-      - redis-data:/var/lib/redis/data
+      - db-data:/var/lib/postgresql/data/
 
 volumes:
-  redis-data:
+  db-data:
