--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,2 @@
 export REDIS_URL="redis://localhost:6379/0"
-export DATABASE_URL="postgres://@127.0.0.1:5432/mancala_dev?sslmode=disable"
+export DATABASE_URL="postgres://mancala-app:p4ssw0rd@127.0.0.1:5432/mancala-db?sslmode=disable"
